src/style.css
:root {
  --sidebar-padding: 0 20px;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

ul {
  list-style-type: none;
}

main {
  display: grid;
  grid-template-columns: 250px 1fr;
  grid-template-rows: 50px 1fr;
  grid-template-areas: 
  "header header"
  "sidebar list";
}

header {
  grid-area: header;
}

.selected {
  background-color: rgb(226, 226, 226);
  border-top-right-radius: 50px;
  border-bottom-right-radius: 50px;
}

.collapse{
  display: none;
  overflow: hidden;
}

.hide {
  opacity: 0;
  transition: visibility 0s, opacity 0.5s linear;
}

.hide:hover {
  opacity: 1;
}

.strike {
  text-decoration: line-through;
  opacity: .2;
}

.sidebar {
  padding: 30px 30px 30px 0;
  grid-area: sidebar;
  font-size: 1.5rem;
  font-weight: 600;
}

.sidebar li {
  margin-top: 10px;
  padding: var(--sidebar-padding);
}

.sidebar li:nth-child(4){
  padding: 0;
}

.projects {
  padding: var(--sidebar-padding);
  display: flex;
  margin-bottom: 10px;
  align-items: center;
}

.projectsBtn {
  margin-left: 10px;
  padding: 5px 15px;
}

.projectItem {
  display: flex;
  font-size: 1.3rem;
  font-weight: 400;
}

.projectItem span{
  margin-right: 10px;
  padding-left: 20px;
}

.projectItem p {
  padding-right: 20px;
}

#notes {
  margin-top: 50px;
}

.list {
  grid-area: list;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.topRow,
.listView {
  width: max(500px, 100%);
}

.topRow {
  display: flex;
  align-items: center;
  margin-bottom: 15px;
}

.listBtn {
  padding: 5px 15px;
}

.dueDate {
  margin-left: auto;
  margin-right: 95px;
}


.todo {
  display: grid;
  grid-template-columns: 20px 1fr 100px 30px 30px;
  align-items: center;
  margin-bottom: 5px;
  font-size: 1.2rem;
  padding: 0 10px;
}

.todo:nth-child(even){
  background-color: rgb(248, 248, 248);
}

.todoDesc {
  grid-column: 2 / span 4;
  font-size: 1rem;
  padding: 5px;
}

.editBtn,
.deleteBtn {
  text-align: right;
}

.editBtn {
  color: rgba(0, 0, 0, 0.2);
}

.deleteBtn {
  color: rgba(255, 0, 0, 0.7);
}

.edits {
  height: 100vh;
  width: 100vw;
  z-index: 10;
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(180, 180, 180, 0.397);
}

.editInputs {
  z-index: 20;
  padding: 20px;
  background-color: white;
  border: 2px solid black;
  border-radius: 5px;
  height: 250px;
  width: 500px;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  font-size: 1.1rem;
}

.editInputs button {
  padding: 5px;
  width: 80px;
}

#editName,
#editDesc {
  margin-bottom: 10px;
  border: 1px solid black;
  border-radius: 2px;
  padding: 5px;
  font-size: .8rem;
}

#editName {
  width: 100%;
}

#editDesc {
  height: 80px;
  width: 100%;
  resize: none;
}

#editAccept {
  margin-left: auto;
}

